Infraestrutura Automatizada/infra_base.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Template básico para provisionamento de uma VPC e recursos de rede essenciais.

Parameters:
  VPCCIDR:
    Description: Bloco CIDR para a nova VPC.
    Type: String
    Default: 10.0.0.0/16
  PublicSubnetCIDR:
    Description: Bloco CIDR para a Subnet pública dentro da VPC.
    Type: String
    Default: 10.0.1.0/24
  EnvironmentName:
    Description: Nome para a Stack e tags de recursos.
    Type: String
    Default: Desafio-CloudFormation-DIO

Resources:

  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-VPC'
        - Key: Projeto
          Value: Desafio-DIO

  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-IGW'

  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnetCIDR
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-PublicSubnet'

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-Public-RT'

  InternetRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  SubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  WebSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Security Group para acesso Web (HTTP/SSH)
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-WebSG'

Outputs:
  VPCId:
    Description: O ID da VPC recém-criada.
    Value: !Ref VPC
    Export:
      Name: !Sub '${EnvironmentName}-VPCId'

  PublicSubnetId:
    Description: O ID da Subnet Pública recém-criada.
    Value: !Ref PublicSubnet
    Export:
      Name: !Sub '${EnvironmentName}-PublicSubnetId'
